--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ section {
 header {
   background-color: #333333;  
 /* You can change the header background image here */    
-  background-image: url(../images/header-background.jpg);
+  background-image: url(http://ts1.mm.bing.net/th?&id=HN.608051714453210589&w=300&h=300&c=0&pid=1.9&rs=0&p=0&url=http%3A%2F%2Fwww.pansing.com.hk%2Fmoshimonsters%2Fsupermoshi%2FWallpaper.html);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -95,7 +95,7 @@ header {
 
 #section-five {
   background-color: #cc0000;
-  background-image: url(../images/tree_bark.png);
+  background-image: urlhttp://ts1.mm.bing.net/th?&id=HN.608006784803668345&w=300&h=300&c=0&pid=1.9&rs=0&p=0&url=http%3A%2F%2Fwall.alphacoders.com%2Fbig.php%3Fi%3D370408
 }
 
 .tree {
