--- a/css/index.css
+++ b/css/index.css
@@ -95,7 +95,8 @@ header {
 
 #section-five {
   background-color: #cc0000;
-  background-image: url(http://ts1.mm.bing.net/th?&id=HN.608006784803668345&w=300&h=300&c=0&pid=1.9&rs=0&p=0&url=http%3A%2F%2Fwall.alphacoders.com%2Fbig.php%3Fi%3D370408
+  background-image: url(http://ts1.mm.bing.net/th?&id=HN.608006784803668345&w=300&h=300&c=0&pid=1.9&rs=0&p=0&url=http%3A%2F%2Fwall.alphacoders.com%2Fbig.php%3Fi%3D370408);
+  
 }
 
 .tree {
